--- a/css/quiq_style.css
+++ b/css/quiq_style.css
@@ -8,116 +8,13 @@
   transition: all .3s;
   outline: none;
 }
-.big_frame{
-  width: 100%;
-  height: 100%;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  position: absolute;
-  justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  -moz-justify-content: center;
-  align-items: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-}
 .flexBox{
   display: flex;
   display: -webkit-flex;
   display: -moz-flex;
   display: -ms-flex;
 }
-.big_bg{
-  background-color: #f1f1f1;
-}
-.bottom_graphix{
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
-.bottom_graphix > img{
-  width: 100%;
-}
-.pmk_controller{
-  width: 720px;
-  position: relative;
-  z-index: 5;
-}
-.pmk_title{
-  width: 100%;
-  text-align: center;
-  font-size: 24px;
-  line-height: 3;
-}
-.upper_tab{
-  background-color: #fff;
-  border:1px solid #e1e1e1;
-}
-.upper_tab > .nav-pills{
-  background-color: #333333;
-  color: #fff;
-}
-.upper_tab > .nav-pills > li > a{
-  color: #fff;
-  font-family: 'Roboto', sans-serif;
-  font-size: 13px;
-  padding: 10px 9px;
-  border-radius: 0px;
-}
 
-.upper_tab > .nav-pills>li.active>a, .upper_tab > .nav-pills>li.active>a:focus, .upper_tab > .nav-pills>li.active>a:hover, .upper_tab .nav>li>a:focus, .upper_tab .nav>li>a:hover{
-  background-color: #ebc518;
-  color: #333;
-}
-.lower_tab .nav-pills{
-  background-color: #666666;
-}
-.lower_tab > .nav-pills > li > a{
-  color: #f1f1f1;
-  font-family: 'Roboto', sans-serif;
-  font-size: 13px;
-  padding: 7px 10px;
-  border-radius: 0px;
-}
-.lower_tab > .nav-pills>li.active>a, .lower_tab > .nav-pills>li.active>a:focus, .lower_tab > .nav-pills>li.active>a:hover, .lower_tab .nav>li>a:focus, .lower_tab .nav>li>a:hover{
-  background-color: transparent;
-  color: #fff;
-  box-shadow: 0px -3px 0px #ebc518 inset; 
-}
-.outer_wrap{
-  width: 100%;
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-}
-.wid50{
-  width: 50%;
-  align-items: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  box-sizing: border-box;
-  padding:5px 20px;
-}
-.wid50:nth-last-child(1){
-  margin-right: auto;
-}
-.rech_btn{
-  font-size: 15px;
-  font-family: 'Roboto', sans-serif;
-  color: #333;
-  background-color: #ebc518;
-  border:none;
-  border-radius: 2px;
-  padding: 10px 15px;
-}
 .js_right{
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
@@ -127,113 +24,14 @@
 .auto_rht{
   margin-left: auto;
 }
-.rech_btn_holder{
-  width: auto;
-  padding: 20px 20px;
-}
-.wid75{
-  width: 75%;
-  align-items: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  box-sizing: border-box;
-}
-.wid25{
-  width: 25%;
-  align-items: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  box-sizing: border-box;
-}
-.shop_text{
-  height: 50px;
-  width: 100%;
-  border:none;
-  padding: 0px 20px;
-  font-size: 16px;
-}
-.search_btn{
-  padding: 5px;
-  justify-content: flex-end;
-}
-.search_btn > button{
-  background-color: #ebc518;
-  border:none;
-  border-radius:3px;
-  padding: 10px 20px;
-  font-weight: 400;
-}
-.navbar-default{
-  background-color: transparent;
-  border:none;
-}
-.nav_outer{
-  padding: 0px 20px;
-  z-index: 99;
-}
-.footer_out{
-  padding: 0px 20px;
-  height:100%;
-  justify-content: space-between;
-  -webkit-justify-content: space-between;
-  -ms-justify-content: space-between;
-  -moz-justify-content: space-between;
-}
-.footer_out div a{
-  color: #666;
-  display: inline-block;
-  padding: 4px 10px;
-  border-right:1px solid #ccc;
-  font-size: 13px;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
 
-}
-.footer_out div a:nth-last-child(1){
-  border-right:none;
-}
-.footer_out div a span{
-  color: #d48828;
-  font-weight: 700;
-}
-.footer_out div a:hover{
-  text-decoration: none;
-}
-.nav_outer .navbar-right{
-  margin-right: 0px;
-}
-.supprt_num{
-  cursor: text;
-}
-.navbar-brand{
-  padding-top: 0px;
-  padding-bottom: 0px;
-  width: 220px;
-}
 .al_cnt{
   align-items: center;
   -webkit-align-items: center;
   -moz-align-items: center;
   -ms-align-items: center;
 }
-.navbar-brand img{
-  width: 100%;
-}
-.nav_rht li a{
-  font-weight: 500;
-  color: #333;
-  font-family: 'Roboto', sans-serif;
-  font-size: 15px;
-}
-.nav_rht .dropdown-menu>li>a{
-  font-size: 13px;
-  color: #666;
-}
-.nav_rht .dropdown-menu>li>a>span{
-  color: #ebc518;
-}
+
 .hidn{
   display: none;
 }
@@ -244,7 +42,7 @@
   background-color: rgba(0,0,0,.5);
   top: 0px;
   bottom: 0px;
-  right: 0px
+  right: 0px;
   left:0px;
   z-index: 1031;
   justify-content: flex-end;
@@ -253,11 +51,11 @@
   -ms-justify-content: flex-end;
 }
 .forClick{
-  width: 100%;
+  width: calc(100% - 400px);
   height: 100%;
 }
 .login_box{
-  width: 480px;
+  width: 400px;
   height: 100%;
   background-color: #fff;
   box-sizing: border-box;
@@ -278,15 +76,16 @@
 }
 .login_container{
   width: 100%;
-  padding: 0px 60px;
+  padding: 0px 50px;
 }
 .login_title{
-  font-weight: 700;
-  font-size: 34px;
+  font-weight: 400;
+  font-size: 24px;
   color: #343434;
   text-align: center;
   width: 100%;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
+  color: #0fa5c4;
 }
 .login_field{
   position: relative;
@@ -299,7 +98,7 @@
   font-size: 18px;
 }
 .is-focused + i{
-  color: #ebc518;
+  color: #0fa6c3;
 }
 .log_reminder .mdl-checkbox__label{
   font-size: 12px;
@@ -310,17 +109,23 @@
   font-size: 12px;
 }
 .log_btn_holder{
-  padding-top: 70px;
+  padding-top: 30px;
   text-align: center;
 }
 .log_btn_holder > button{
   padding: 15px 60px;
-  background-color:#ebc518;
-  border-radius: 30px; 
+  background-color:#0fa6c3;
+  background-image: linear-gradient(to right, #17a0d7 , #00b09e);
+  border-radius: 3px; 
   border:none;
   font-size: 16px;
-  font-weight: 700;
-  color: #333;
+  font-weight: 400;
+  color: #fff;
+  width: 100%;
+  transition: all .3s;
+}
+.log_btn_holder > button:focus{
+  box-shadow: 0px 2px 3px rgba(0,0,0,.4) inset;
 }
 .reg_board{
   width: 100%;
@@ -369,111 +174,29 @@
 .link_tag{
   cursor: pointer;
 }
-.nav_outer .navbar-toggle{
-  margin-right: 0px;
-}
-.footer_pmk{
-  background-color: #dedede;
-  height: 40px;
+.q_wrapper{
   width: 100%;
-  position: fixed;
-  z-index: 22;
-  bottom: 0px;
-  left: 0px;
-  box-shadow:0px -1px 0px #d4d3d3;
+  background-color: #444;
+  height: 500px;
 }
-.custom_wrapper{
-  margin: 0px auto;
-  margin-top: 80px;
-  margin-bottom: 80px;
+.link_forgot{
+  padding-top: 20px;
 }
-.page_main_title{
-  font-size: 34px;
-  font-family: 'Open Sans', sans-serif;
-  color: #333;
-  width: 100%;
-  line-height: 1;
-}
-.filtr_box{
-  margin-right: 10px;
-}
-.filtr_box select{
-  background-color: #fff;
-  border:none;
-  padding: 10px 15px;
-  font-size: 14px;
-  min-width: 260px;
-  border-radius: 3px;
-}
-.filtr_btn{
-  padding: 10px 25px;
-  border:none;
-  background-color: #ebc518;
-  color: #303040;
-  font-weight: 600;
-  border-radius: 3px;
-}
-.dna_grid{
-  color: #222;
-}
-.dna_grid .row{
-  border-bottom:1px solid #e1e1e1;
-  padding-top: 7px;
-  padding-bottom:7px;
-  margin: 0px;
+.link_forgot a{
+  color: #83a7b6;
+  text-decoration: underline;
   font-size: 13px;
 }
-
-.dna_head{
-  font-size: 15px;
-  font-weight: 600;
-  padding-top: 30px !important;
-  padding-bottom: 10px;
-}
-.filtr_labl{
-  font-size: 14px;
-  padding-bottom: 5px;
-}
-.al_right{
-  margin-left: auto;
-}
-.filter_section{
-  border-top:1px solid #ebebeb;
-  border-bottom:1px solid #ebebeb;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  align-items: flex-end;
-  -webkit-align-items: flex-end;
-  -ms-align-items: flex-end;
-  -moz-align-items: flex-end;
-  width: 100%;
-  margin-top: 10px;
-}
-.filtr_box .btn-default{
-  border:none;
-  padding: 10px 15px;
-  border-radius: 3px;
-}
-.filtr_box .btn-group.open .dropdown-toggle{
-  box-shadow: none;
-  background-color: #fff;
+.login_box .mdl-textfield__input{
+  color: #4c6c79;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
 }
 @media (max-width: 1365px) {
     
 }
 @media (max-width: 767px) {
-    .nav_outer .navbar-collapse{
-      background-color: #f1f1f1;
-      width: 100%;
-      border-bottom: 1px solid #ccc;
-    }
-    .pmk_title{
-      line-height: 2;
-      font-size: 18px;
-    }
-    .wid50{
-      width: 100%;
-    }
+    
     .rech_radio{
       margin-top: 10px;
     }
