--- a/css/erp_app_style.css
+++ b/css/erp_app_style.css
@@ -388,6 +388,7 @@ body{
 	background-color: #fff;
 	border:none;
 	box-shadow: 0px 0px 3px rgba(0,0,0,.3);
+	border-radius: 0px;
 }
 .submenu_bar .navbar-default .navbar-nav>li>a{
 	color: #4d6c7b;
@@ -395,9 +396,14 @@ body{
     text-transform: uppercase;
     font-weight: 500;
 }
-.navbar{
+
+.submenu_bar .navbar{
 	min-height: 32px;
 	margin-bottom: 0px;
+}
+.submenu_bar .navbar-collapse{
+	padding-left: 0px;
+	padding-right: 0px;
 }
 .submenu_bar .navbar-default .navbar-collapse, .submenu_bar .navbar-default .navbar-form{
 	background-color: transparent;
@@ -420,9 +426,73 @@ body{
 .breadscrumb i{
 	color: #179fd8;
 }
+.menu_tabs{
+	padding:10px;
+	padding-top: 0px;
+}
+.menu_tabs .nav-tabs{
+	background-color: #12a3cb;
+	border-bottom:1px solid #12a3cb;
+}
+.menu_tabs .nav-tabs>li>a{
+	color: #edf5f8;
+	font-size: 13px;
+	font-weight: 400;
+	text-transform: uppercase;
+	border:none;
+}
+.menu_tabs .nav-tabs>li>a:hover, .menu_tabs .nav-tabs>li>a:active{
+	background-color: transparent;
+	border:none;
+}
+.menu_tabs .nav-tabs>li>a:focus{
+	background-color: transparent;
+	border:none;
+}
+.menu_tabs .nav-tabs>li.active>a, .menu_tabs .nav-tabs>li.active>a:focus, .menu_tabs .nav-tabs>li.active>a:hover{
+	background-color: transparent;
+	border:none;
+	background-color: #1189aa;
+	border-radius: 0px;
+	color: #fff;
+	box-shadow: 0px -2px 0px rgba(0,0,0,.3) inset;
+}
+.menu_tabs .tab-content{
+	padding: 5px;
+	background-color: #eef3f4;
+}
+.tool_btn{
+	background-color: #bfe5f5;
+	font-size: 13px;
+	border:none;
+	padding: 7px 15px;
+	color: #34495e;
+	font-weight: 500;
+	border-radius:3px;
+}
 @media (min-width: 768px){
 	.navbar-nav>li>a {
 	    padding-top: 6px;
 	    padding-bottom: 6px;
+	}
+	.submenu_bar .navbar-default .navbar-nav>li:nth-child(1)>a{
+		padding-left: 0px;
+	}
+}
+@media (max-width: 768px){
+	.content_panel {
+    	width: calc(100% - 40px);
+	}
+	.navbar-nav{
+		margin: 7.5px 0px;
+	}
+	.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
+		background-color: #c9edfc;	
+	}
+	.sideMenuX ul li a:focus{
+		background-color: #12a3cb;
+	}
+	.sideMenuX ul li a:focus i{
+		color: #fff;
 	}
 }
