--- a/css/erp_app_style.css
+++ b/css/erp_app_style.css
@@ -434,19 +434,21 @@ body{
 	background-color: #d3ebf6;
 }
 .breadscrumb{
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: 500;
 	padding: 15px;
 	width: 100%;
 	text-transform: uppercase;
 }
+.breadscrumb a:nth-child(1){
+	padding-left: 0px;
+}
+.breadscrumb a:nth-last-child(1){
+	color: #4d6c7b;
+}
 .breadscrumb a{
 	color: #7f9fae;
-	padding-right: 10px;
-}
-.breadscrumb span{
-	color: #4d6c7b;
-	padding-left: 10px;
+	padding: 0px 10px 0px 10px;
 }
 .breadscrumb i{
 	color: #179fd8;
@@ -672,7 +674,7 @@ body{
 .bg_lite{
 	background-color: #eef3f4;
 }
-.bg_forms{
+.bg_gradient{
 	background:linear-gradient(to left, #2193b0, #6dd5ed);
 }
 .mdl-textfield__input{
@@ -681,21 +683,44 @@ body{
 }
 .cardBox{
 	margin: 0px;
-	background-color: rgba(255,255,255,1);
-	box-shadow: 0px 0px 5px rgba(0,0,0,.1);
 }
 .cardHeader{
-	background-color: #f5f5f5;
-	padding: 15px 10px;
+	padding: 5px 0px;
 	font-size: 16px;
-	border-bottom:1px solid #ddd;
-	color: #52575b;
+	border-bottom:1px dashed #ccc;
+	color: #12a3cb;
+	font-weight: 500;
+	margin: 0px 10px;
 }
+
 .mdl-textfield__label{
 	font-size: 14px;
 }
 .field_container{
 	padding: 20px 10px;
+}
+.gnrl_tab{
+	width: 100%;
+}
+.gnrl_tab > .nav-tabs{
+	border-bottom: 2px solid #f5b489;
+}
+.gnrl_tab > .nav-tabs > li{
+	text-transform: uppercase;
+	border: none;
+	margin-bottom: -2px;
+}
+.gnrl_tab > .nav-tabs > li a{
+	border: none;
+	background-color: transparent;
+	color: #9db0b7;
+	transition: all .3s;
+}
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover{
+	border: none;
+	background-color: transparent;
+	color: #34495e;
+	box-shadow: 0px -2px 0px #1abc9c inset;
 }
 @media (min-width: 768px){
 	.navbar-nav>li>a {
