--- a/css/erp_app_style.css
+++ b/css/erp_app_style.css
@@ -699,6 +699,12 @@ body{
 .field_container{
 	padding: 20px 10px;
 }
+.padd_down_cutter{
+	padding-bottom: 0px;
+}
+.padd_up_cutter{
+	padding-top: 0px;
+}
 .gnrl_tab{
 	width: 100%;
 }
@@ -721,6 +727,36 @@ body{
 	background-color: transparent;
 	color: #34495e;
 	box-shadow: 0px -2px 0px #1abc9c inset;
+}
+.mdl-checkbox{
+	margin-top: 28px;
+}
+.mdl-checkbox__label, .mdl-radio__label{
+	font-size: 14px;
+}
+.mdl-radio{
+	margin-right: 10px;
+}
+.radio_text_box{
+	width: 80%;
+	margin-left: auto;
+}
+.wrap_fl{
+	flex-wrap: wrap;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
+}
+.content_inner_box{
+	border: 1px solid #bfe5f5;
+	width: 100%;
+}
+.inner_box_title{
+	padding: 10px 10px;
+	background-color: #bfe5f5;
+	font-size: 14px;
+	font-weight: 500;
+	color: #34495e;
 }
 @media (min-width: 768px){
 	.navbar-nav>li>a {
