--- a/css/erp_app_style.css
+++ b/css/erp_app_style.css
@@ -500,6 +500,8 @@ body{
 .content_wrap{
 	width: 100%;
 	padding: 0px 10px 10px 10px;
+	height: calc(100% - 220px);
+	overflow-y: auto;
 }
 .quick_tiles{
 	padding: 10px;
@@ -728,6 +730,10 @@ body{
 	color: #34495e;
 	box-shadow: 0px -2px 0px #1abc9c inset;
 }
+.gnrl_tab > .nav-tabs > li a:hover{
+	color: #12a3cb;
+}
+
 .mdl-checkbox{
 	margin-top: 28px;
 }
