--- a/css/erp_app_style.css
+++ b/css/erp_app_style.css
@@ -865,6 +865,32 @@ body{
 	padding: 4px 5px;
 	margin-bottom: 5px;
 }
+.companyLogo{
+	width: 200px;
+	height: 120px;
+	background-color: rgba(0,0,0,.05);
+	border: 3px solid #fff;
+	box-shadow: 0px 0px 4px rgba(0,0,0,.4);
+	background-image: url(../images/logo_demo.svg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50%;
+}
+.mdl-button--accent.mdl-button--accent.mdl-button--raised, .mdl-button--accent.mdl-button--accent.mdl-button--fab{
+	background-color: #12a3cb;
+	background-image: linear-gradient(to right, #179fd8, #00b09f);
+}
+.btn_Box{
+	padding: 10px 0px;
+}
+.field_container .mdl-tabs__tab{
+	padding: 5px 15px;
+	text-decoration: none;
+}
+.field_container .mdl-tabs.is-upgraded .mdl-tabs__tab.is-active{
+	color: #34495e;
+	text-decoration: none;
+}
 @media (min-width: 768px){
 	.navbar-nav>li>a {
 	    padding-top: 6px;
