--- a/css/erp_app_style.css
+++ b/css/erp_app_style.css
@@ -858,6 +858,13 @@ body{
 	font-weight: 500;
 	color: #34495e;
 }
+.tab_inner_title{
+	padding: 10px 10px;
+	font-size: 15px;
+	font-weight: 500;
+	color: #34495e;
+	border-bottom:2px solid #f5b489;
+}
 .form_heading{
 	font-size: 14px;
 	font-weight: 600;
@@ -918,6 +925,20 @@ body{
 }
 .field_container .mdl-tabs__tab-bar{
 		background-color: #bfe5f5;
+}
+.minorTab > .nav-pills{
+	background-color: #f1f1f1;
+}
+.minorTab > .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
+	background-color: #90c6dc;
+	border-radius: 0px;
+	color: #fff;
+	text-shadow: 1px 1px 2px rgba(0,0,0,.1);
+}
+.minorTab > .nav-pills>li>a{
+	color: #4d6c7b;
+	border-radius: 0px;
+	font-size: 13px;
 }
 @media (min-width: 768px){
 	.navbar-nav>li>a {
